Support mutliple rails